# simple_raytracing

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  commonheader.h  dielectric.h  hitable.h  hitablelist.h  lambertian.h  material.h  metal.h  random.h  ray.h  renderer.h  renderthreadpool.h  sphere.h  viewport.h
src/: camera.cpp  dielectric.cpp  hitablelist.cpp  lambertian.cpp  main.cpp  material.cpp  metal.cpp  renderer.cpp  renderthreadpool.cpp  sphere.cpp
